insurance company analysis. 2d problem solution

--- a/Math Distribution. Insurance company.ipynb
+++ b/Math Distribution. Insurance company.ipynb
@@ -30,17 +30,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from math import factorial, exp, sqrt, pi, ceil\n",
+    "from math import factorial, exp, sqrt, pi, ceil, floor\n",
     "from time import time"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getPoissonProbability(m, a):\n",
@@ -70,13 +74,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Дано:***<br> Есть страховая компания. Она обслуживает $n = 10000$ людей. Каждый клиент платит каждый год страховой взнос $C = 12$ у.е. В случае смерти страховая компания выплачивает $D = 1000$ у.е. семье умершего. Вероятность смерти человека $p=0.006$\n",
+    "***Дано***<br> Есть страховая компания. Она обслуживает $n = 10000$ людей. Каждый клиент платит каждый год страховой взнос $C = 12$ у.е. В случае смерти страховая компания выплачивает $D = 1000$ у.е. семье умершего. Вероятность смерти человека $p=0.006$\n",
     "<br>***Найти*** <br> $X$ - вероятность того, что компания разорится (прибыль <= 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -109,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,13 +134,15 @@
    "source": [
     "Теперь вычислим вероятность компании разорится, т.е. сумму вероятностей того, что в год умрет от $k$ до $n$ клиентов <br>\n",
     "$$X=\\sum_k^n(P_m)=1-\\sum_0^{k-1}(P_m),$$\n",
-    " где $P_m$ - это вероятность того, что в год умрет m клиентов"
+    " где $P_m$ - это вероятность того, что в год умрет $m$ клиентов"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "useNormalDistribution = True # if false - poisson distribution is used"
@@ -144,8 +150,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = n*p #среднее ожидаемое количество смертей в год"
@@ -153,14 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution Time:  0.0\n"
+      "Execution Time:  0.004986763000488281\n"
      ]
     }
    ],
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -203,13 +211,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Найти*** <br> $Y$ - вероятность того, что компания заработает не менее $M=40000$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "m = 4*10**4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Решение*** <br>\n",
+    "Найдем максимальное $k$ смертей клиентов, при котором компания заработает не менее $M$ у.е., т.е. $C*n-D*k>=M$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = floor((c*n-m)/d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Максимальное кол-во смертей, приводящее к заработку M:  80\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Максимальное кол-во смертей, приводящее к заработку M: ', k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Теперь вычислим вероятность компании разорится, т.е. сумму вероятностей того, что в год умрет от $0$ до $k$ клиентов <br>\n",
+    "$$Y=\\sum_0^k(P_m),$$\n",
+    " где $P_m$ - это вероятность того, что в год умрет $m$ клиентов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution Time:  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = 0\n",
+    "start = time()\n",
+    "if useNormalDistribution:\n",
+    "    for i in range(k):\n",
+    "        y += getNormalProbability(i, a)\n",
+    "else:\n",
+    "    for i in range(k):\n",
+    "        y += getPoissonProbability(i, a)\n",
+    "end = time()\n",
+    "print('Execution Time: ', end - start)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ответ: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Страховая компания с вероятностью  0.9941187150540904  получит прибыль в размере не менее, чем  40000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Страховая компания с вероятностью ', y, ' получит прибыль в размере не менее, чем ', m)"
+   ]
   }
  ],
  "metadata": {
