Football betting. Error fixed

--- a/Maths Distribution. Football betting.ipynb
+++ b/Maths Distribution. Football betting.ipynb
@@ -211,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "attack_a = av_goals_home_a/av_goals_home_total\n",
@@ -270,10 +272,10 @@
     "\n",
     "start = time()\n",
     "p_eq += getPoissonProbability(0, goals_a) * getPoissonProbability(0, goals_b) \n",
-    "for m in range(1, k_limit-1):\n",
+    "for m in range(1, k_limit):\n",
     "    x = 0\n",
     "    y = 0\n",
-    "    for i in range(m-1):\n",
+    "    for i in range(m):\n",
     "        x += getPoissonProbability(i, goals_b)\n",
     "        y += getPoissonProbability(i, goals_a)\n",
     "    p_win_a += getPoissonProbability(m, goals_a)*x\n",
@@ -300,9 +302,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Команда А выиграет у команды B с вероятностью 0.0856882964461915\n",
-      "Команда А сыграет вничью с командой B с вероятностью 0.45344186926236874\n",
-      "Команда А проиграет команде B с вероятностью 0.039051814326996\n"
+      "Команда А выиграет у команды B с вероятностью 0.3354439795665938\n",
+      "Команда А сыграет вничью с командой B с вероятностью 0.4534446339306692\n",
+      "Команда А проиграет команде B с вероятностью 0.21060240700414995\n"
      ]
     }
    ],
