--- a/Maths Distribution. Football betting.ipynb
+++ b/Maths Distribution. Football betting.ipynb
@@ -269,19 +269,28 @@
     "p_win_a = 0\n",
     "p_eq = 0 \n",
     "p_lose_a = 0\n",
+    "x_sum = 0\n",
+    "y_sum = 0 \n",
+    "\n",
+    "x = 0\n",
+    "y = 0\n",
     "\n",
     "start = time()\n",
-    "p_eq += getPoissonProbability(0, goals_a) * getPoissonProbability(0, goals_b) \n",
-    "for m in range(1, k_limit):\n",
-    "    x = 0\n",
-    "    y = 0\n",
-    "    for i in range(m):\n",
-    "        x += getPoissonProbability(i, goals_b)\n",
-    "        y += getPoissonProbability(i, goals_a)\n",
-    "    p_win_a += getPoissonProbability(m, goals_a)*x\n",
-    "    p_lose_a += getPoissonProbability(m, goals_b)*y\n",
-    "    p_eq += getPoissonProbability(m, goals_a) * getPoissonProbability(m, goals_b) \n",
+    "for m in range(0, k_limit):\n",
+    "    #to store probability to score goals: from 0 to [m-1]\n",
+    "    x_sum += x\n",
+    "    y_sum += y\n",
+    "    x = getPoissonProbability(m, goals_a)\n",
+    "    y = getPoissonProbability(m, goals_b)\n",
     "    \n",
+    "    p_eq += x * y \n",
+    "    \n",
+    "    #we can't win by scoring 0 goals\n",
+    "    if (m == 0):\n",
+    "        continue;\n",
+    "    p_win_a += x*y_sum\n",
+    "    p_lose_a += y*x_sum\n",
+    "   \n",
     "end = time()\n",
     "print('Execution Time: ', end - start)"
    ]
